crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@bin_op__sub_int.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/bin_op/sub_int.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
